@@ -1,5 +1,5 @@
 <input type="checkbox"
        name="${field.name}" value="${field.widget.true_val}"
        id="${field.oid}"
-       tal:attributes="checked cstruct == field.widget.true_val"/>
+       tal:attributes="checked cstruct == field.widget.true_val; class field.widget.css_class;"/>
 
