@@ -5,12 +5,12 @@
   <div>
     <label for="${field.oid}">${subject}</label>
     <input type="text" name="value" value="${cstruct}"
-           tal:attributes="size field.widget.size" id="${field.oid}"/>
+           tal:attributes="size field.widget.size; class field.widget.css_class;" id="${field.oid}"/>
   </div>
   <div>
     <label for="${field.oid}-confirm">${confirm_subject}</label>
     <input type="text" name="confirm" value="${confirm}"
-           tal:attributes="size field.widget.size" id="${field.oid}-confirm"/>
+           tal:attributes="size field.widget.size; class field.widget.css_class;" id="${field.oid}-confirm"/>
   </div>
 
   <script tal:condition="field.widget.mask" type="text/javascript">
