@@ -8,7 +8,7 @@
   <div>
     <label for="${field.oid}-confirm">Confirm Password</label>
     <input type="password" name="confirm" value="${confirm}"
-           tal:attributes="size field.widget.size" id="${field.oid}-confirm"/>
+           tal:attributes="size field.widget.size; class field.widget.css_class;" id="${field.oid}-confirm"/>
   </div>
   <input type="hidden" name="__end__" value="${field.name}:mapping"/>
 </div>
