@@ -11,7 +11,7 @@
 
   </div>
 
-  <input type="file" name="upload" tal:attributes="size field.widget.size"
+  <input type="file" name="upload" tal:attributes="size field.widget.size; class field.widget.css_class;"
          id="${field.oid}"/>
 
   <input type="hidden" name="__end__" value="${field.name}:mapping"/>
