@@ -1,3 +1,3 @@
 <input type="password" name="${field.name}" value="${cstruct}" 
-       tal:attributes="size field.widget.size" id="${field.oid}"/>
+       tal:attributes="size field.widget.size; class field.widget.css_class;" id="${field.oid}"/>
 
