@@ -1,6 +1,6 @@
 <span tal:repeat="choice field.widget.values" tal:omit-tag="">
   <label for="${field.oid}-${repeat.choice.index}">${choice[1]}</label>
-  <input tal:attributes="checked choice[0] == cstruct"
+  <input tal:attributes="checked choice[0] == cstruct; class field.widget.css_class;"
          type="radio"
          name="${field.name}"
          value="${choice[0]}"
