@@ -1,6 +1,6 @@
 <span tal:omit-tag="">
     <input type="text" name="${field.name}" value="${cstruct}" 
-           tal:attributes="size field.widget.size"
+           tal:attributes="size field.widget.size; class field.widget.css_class;"
            id="${field.oid}"/>
     <script tal:condition="field.widget.mask" type="text/javascript">
       jQuery(function($) {
