@@ -110,6 +110,7 @@ class DummyWidget(object):
     name = 'name'
     true_val = 'true'
     false_val = 'false'
+    css_class = None
     
 class DummyField(object):
     widget = DummyWidget()
